<resources>

    <string name="app_name">minke</string>
    <string name="home">Home</string>
    <string name="scan">Scan</string>
    <string name="shop">Shop</string>
    <string name="browse">Browse Products</string>
    <string name="add_item">Add Item</string>
    <string name="add_product">Add Product</string>
    <string name="product_info">Product Info</string>
    <string name="product">Product</string>
    <string name="category">Category</string>
    <string name="graph">Graph</string>
    <string name="view_graph">View Graph</string>
    <string name="name">Name</string>
    <string name="store">Store</string>
    <string name="store_list">Store List</string>
    <string name="location">Location</string>
    <string name="scan_tag">Scan Tag</string>
    <string name="enter_shopping">Enter Shopping</string>
    <string name="browse_items">Browse Items</string>
    <string name="get_products">Get Products</string>
    <string name="capture">Capture</string>
    <string name="logo">Logo Image</string>
    <string name="brand">Brand</string>
    <string name="size">Size</string>
    <string name="price">Price</string>
    <string name="new_price">New Price</string>
    <string name="info">Info</string>
    <string name="filter_location">Location Filters</string>
    <string name="filter_product">Product Filters</string>
    <string name="search">Search</string>
    <string name="location_search">Location Search</string>
    <string name="product_search">Product Search</string>
    <string name="delete">Delete Item</string>
    <string name="next">Next</string>
    <string name="directions">Directions</string>
    <string name="date">Date</string>
    <string name="find_stores">Find Stores</string>
    <string name="shoplist">Shopping List</string>
    <string name="list_detail">Shopping List Details</string>
    <string name="refresh">Refresh</string>
    <string name="login">"Login with: "</string>
    <string name="facebook_login">Login with Facebook</string>
    <string name="google_login">Login with Google</string>

</resources>