<LinearLayout xmlns:app="http://schemas.android.com/apk/res/za.ac.sun.cs.hons.minke"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/OuterLayout" >

    <com.markupartist.android.widget.ActionBar
        android:id="@+id/actionbar_scan"
        style="@style/ActionBar"
        android:layout_width="match_parent"
        app:title="@string/scan" />

    <RelativeLayout style="@style/InnerLayout" >

        <EditText
            android:id="@+id/nameText"
            style="@style/RightWrapped"
            android:layout_alignParentRight="true"
            android:inputType="text" >
        </EditText>

        <TextView
            android:id="@+id/nameLbl"
            style="@style/LeftWrapped"
            android:layout_below="@+id/actionbar_scan"
            android:text="@string/name" />

        <AutoCompleteTextView
            android:id="@+id/brandText"
            style="@style/RightWrapped"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/nameText"
            android:completionThreshold="1" />

        <TextView
            android:id="@+id/brandLbl"
            style="@style/LeftWrapped"
            android:layout_below="@+id/nameText"
            android:text="@string/brand" />

        <AutoCompleteTextView
            android:id="@+id/categoryText"
            style="@style/RightWrapped"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/brandText"
            android:completionThreshold="1" />

        <TextView
            android:id="@+id/categoryLbl"
            style="@style/LeftWrapped"
            android:layout_below="@+id/brandText"
            android:text="@string/category" />

        <EditText
            android:id="@+id/priceText"
            style="@style/RightWrapped"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/categoryText"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/priceLbl"
            style="@style/LeftWrapped"
            android:layout_below="@+id/categoryText"
            android:text="@string/price" />

        <EditText
            android:id="@+id/sizeText"
            style="@style/RightWrapped"
            android:layout_below="@+id/priceText"
            android:inputType="numberDecimal" />

        <Spinner
            android:id="@+id/unitSpinner"
            style="@style/RightWrapped"
            android:layout_below="@+id/sizeText" />

        <TextView
            android:id="@+id/sizeLbl"
            style="@style/LeftWrapped"
            android:layout_below="@+id/priceText"
            android:text="@string/size" />

        <ImageButton
            android:id="@+id/graphBtn"
            style="@style/WrappedSize"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/add_product"
            android:onClick="addProduct"
            android:src="@drawable/add_128" />
    </RelativeLayout>

</LinearLayout>