<LinearLayout xmlns:app="http://schemas.android.com/apk/res/za.ac.sun.cs.hons.minke"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/OuterLayout" >

    <com.markupartist.android.widget.ActionBar
        android:id="@+id/actionbar_browse"
        style="@style/ActionBar"
        android:layout_width="match_parent"
        app:title="@string/browse" />

    <RelativeLayout style="@style/InnerLayout" >

        <LinearLayout
            android:id="@+id/headerHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             >

            <TextView
                android:id="@+id/browseHeader"
                style="@style/HeaderFont"
                android:text="@string/product_info" />

            <ImageButton
                android:id="@+id/graphBtn"
                style="@style/WrappedSize"
                android:layout_marginLeft="120dp"
                android:contentDescription="@string/graph"
                android:onClick="showHistories"
                android:src="@drawable/graph_40" />
        </LinearLayout>

        <ListView
            android:id="@+id/bp_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/headerHolder" />
    </RelativeLayout>

</LinearLayout>