<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/loginLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dip"
        android:text="@string/login" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="50dip" >

        <ImageButton
            android:id="@+id/loginFacebookButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/facebook_login"
            android:drawableTop="@drawable/home_btn_facebook_login"
            android:paddingRight="10dip" />

        <ImageButton
            android:id="@+id/loginGoogleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/google_login"
            android:drawableTop="@drawable/home_btn_google_login"
            android:paddingLeft="10dip"
            android:paddingRight="10dip" />
    </LinearLayout>

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/home_btn_logout"
        android:gravity="center"
        android:visibility="invisible" />

</LinearLayout>